--- a/tabs/adminlogin.html
+++ b/tabs/adminlogin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="Asset/css/login.css">
+    <link rel="stylesheet" type="text/css" href="Asset/css/adminlogin.css">
     <title>Login Page</title>
 </head>
 
@@ -27,9 +27,6 @@
                     <input type="text" name="password" class="form-control" placeholder="password"
                         aria-label="Enter USername">
                 </div>
-                <div class="col-sm-12 d-flex justify-content-center pt-2">
-                    <a href="">Forgot Password</a>
-                </div>
                 <div class="col-12 d-flex justify-content-center py-2">
                     <button type="submit" class="btn my-2 my-sm-0 Login" id="Login">
                         <i class="fa-solid fa-arrow-right-from-bracket"></i>
@@ -38,9 +35,6 @@
                     <!-- <input type="submit" value="submit"> -->
                 </div>
             </form>
-            <div class="col-sm-12 d-flex justify-content-center pt-2">
-                <a href="">Didn't have account? Request one</a>
-            </div>
         </div>
     </div>
 </body>
@@ -52,6 +46,7 @@
         if(username === null || username.length <= 6){
             console.log("username is invalid")
         }else{
+            window.location.href = "/adminpage"
             console.log("else : "+username);
         }
 
