--- a/tabs/login.html
+++ b/tabs/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="Asset/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/home/Asset/css/login.css">
     <title>Login Page</title>
 </head>
 
@@ -39,7 +39,7 @@
                 </div>
             </form>
             <div class="col-sm-12 d-flex justify-content-center pt-2">
-                <a href="">Didn't have account? Request one</a>
+                <a href="/home/registration">Didn't have account? Request one</a>
             </div>
         </div>
     </div>
@@ -52,7 +52,7 @@
         if(username === null || username.length <= 6){
             console.log("username is invalid")
         }else{
-            console.log("else : "+username);
+            window.location.href = "/home/studentlogin"
         }
 
         return false
