--- a/tabs/adminhome.html
+++ b/tabs/adminhome.html
@@ -187,6 +187,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row5">
+                            <div class="main-body flex-wrap d-flex">
+                                <div class="d-flex dob-body align-items-center">
+                                    <div class="StdHeading pl-1">Email :</div>
+                                    <div class="StdVal pl-1">khizarshiakh2922@gmail.com</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
