--- a/tabs/register.html
+++ b/tabs/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,58 +9,181 @@
     <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/home/Asset/css/register.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Registration</title>
 </head>
+
 <body>
-<div class="d-flex justify-content-center align-item-center">
-    <div id="teacher" class="teacher p-2">
-    <form action="" method="post">
-        <h2>Add Teacher</h2>
-        <hr class="dashed">
-        <div class="d-flex justify-content-around flex-wrap py-1">
-            <div>
-                <span id="felidname" class="spanfiled">Name</span>
-                <input type="text" name="name" id="name" class="form-control" placeholder="name"
-                    aria-label="Enter name">
-            </div>
+    <nav class="navbar navbar-light bglb">
+        <span class="navbar-brand mb-0 h1 m-0 IndeiFlower" id="navtittle">Teacher Booking Appointment
+            <img src="Asset/Image/comp.jpeg" class="navimg"></span>
+            <button class="btn btn-outline-primary my-2 my-sm-0 Login" id="Login">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                Login
+            </button>
+    </nav>
 
-            <div>
-                <span id="felidDepartement" class="spanfiled">Departement</span>
-                <input type="text" name="Departement" id="Departement" class="form-control"
-                    placeholder="Departement" aria-label="Enter Departement">
-            </div>
-        </div>
-        <div class="d-flex justify-content-around flex-wrap py-1">
-            <div>
-                <span id="felidSubject" class="spanfiled">Subject</span>
-                <input type="text" name="Subject" id="Subject" class="form-control" placeholder="Subject"
-                    aria-label="Enter Subject">
-            </div>
 
-            <div>
-                <span id="felidID" class="spanfiled">ID</span>
-                <input type="text" name="ID" id="ID" class="form-control" placeholder="id"
-                    aria-label="Enter id">
-            </div>
-        </div>
-        <div class="d-flex justify-content-around flex-wrap py-1">
-            <div>
-                <span id="felidPhone_no" class="spanfiled">Phone no.</span>
-                <input type="number" maxlength="10" minlength="10" name="Phone_no" id="Phone_no"
-                    class="form-control" placeholder="Phone no." aria-label="Enter Phone no.">
-            </div>
+    <div class="d-flex pt-5 justify-content-center align-item-center">
+        <div id="student" class="student p-2">
+            <form action="" method="post">
+                <h2>Enter Details</h2>
+                <hr class="dashed">
+                <div class="d-flex justify-content-around flex-wrap col-md-12 py-1">
+                    <div class="col-md-6">
+                        <span id="felidname" class="spanfiled">Name</span>
+                        <input type="text" name="name" id="name" class="form-control" placeholder="name"
+                            aria-label="eg khizar,mayur...">
+                    </div>
 
-            <div>
-                <span id="felidaddress" class="spanfiled">Address</span>
-                <input type="text" name="Address" id="address" class="form-control" placeholder="address"
-                    aria-label="Enter Address">
-            </div>
+                    <div class="col-md-6">
+                        <span id="felidrollnumber" class="spanfiled">Roll no.</span>
+                        <input type="text" name="rollnumber" id="rollnumber" class="form-control"
+                            placeholder="eg. FS19IF034" aria-label="Enter rollnumber">
+                    </div>
+                </div>
+                <div class="d-flex justify-content-around flex-wrap col-md-12 py-1">
+                    <div class="col-md-6">
+                        <span id="felidDob" class="spanfiled">Dob</span>
+                        <input type="date" name="Dob" id="Dob" class="form-control" placeholder="Dob"
+                            aria-label="Enter Date Of Birth">
+                    </div>
+
+                    <div class="col-md-6">
+                        <span id="felidbloodgp" class="spanfiled">Blood Group</span>
+                        <input type="text" name="bloodgp" id="bloodgp" class="form-control" placeholder="eg. B+,A+.."
+                            aria-label="Enter your Blood Group">
+                    </div>
+                </div>
+                <div class="d-flex justify-content-around flex-wrap col-md-12 py-1">
+                    <div class="col-md-6">
+                        <span id="felidPhone_no" class="spanfiled">Phone no.</span>
+                        <input type="number" maxlength="10" minlength="10" name="Phone_no" id="Phone_no"
+                            class="form-control" placeholder="Phone no." aria-label="Enter Phone no.">
+                    </div>
+                    <div class="col-md-6">
+                        <span id="felidemail" class="spanfiled">Enter Email</span>
+                        <input type="text" name="email" id="email" class="form-control" placeholder="eg. bot@1234bot.com"
+                            aria-label="Enter email">
+                    </div>
+                </div>
+                <div class="d-flex justify-content-around flex-wrap col-md-12 py-1">
+                    <div class="col-md-12">
+                        <span id="felidaddress" class="spanfiled">Address</span>
+                        <textarea class="form-control w-100" id="address" placeholder="malad West" aria-label="eg. Enter Address" rows="3"></textarea>
+                        <!-- <input type="textarea"  name="Phone_no" id="Phone_no"
+                            class="form-control" placeholder="Phone no." aria-label="Enter Phone no."> -->
+                    </div>
+                </div>
+                <div class="d-flex py-1 justify-content-center">
+                    <button class="btn btn-dark" type="submit">Submit</button>
+                </div>
+            </form>
         </div>
-        <div class="d-flex py-1 justify-content-center">
-            <button class="btn btn-dark" type="submit">Submit</button>
-        </div>
-    </form>
     </div>
-    </div>
+
+
+    <div role="alert" aria-live="assertive" aria-atomic="true" data-animation="true" id="toast" class="toast hide t-msg" data-autohide="true">
+        <div class="toast-header">
+          <!-- <img src="..." class="rounded mr-2" alt="..."> -->
+          <strong class="mr-auto">iNeuron</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+            <span>Application Submitted</span>
+            <br>
+            <span>Succesfully</span>
+        
+        </div>
+      </div>
+
+
+
+      
+    <script>
+        function $1(a){return document.getElementById(a)}
+        $('form').submit(()=>{
+            let temp = 0 
+            let name = document.getElementById("name")
+            let rollno = document.getElementById("rollnumber")
+            let Dob = document.getElementById("Dob")
+            let bloodgp = document.getElementById("bloodgp")
+            let Phone_no = document.getElementById("Phone_no")
+            let address = document.getElementById("address")
+            let emial = document.getElementById("email")
+            // console.log("val from name",name.value.length)
+            if (name.value.trim() == "") {
+                temp += 1
+                $1("felidname").classList.add("error")
+                name.classList.add("errorinput")
+            } else {
+                $1("felidname").classList.remove("error")
+                name.classList.remove("errorinput")
+            }
+            if (rollnumber.value.trim() == "") {
+                temp += 1
+                $1("felidrollnumber").classList.add("error")
+                rollnumber.classList.add("errorinput")
+            } else {
+                $1("felidrollnumber").classList.remove("error")
+                rollnumber.classList.remove("errorinput")
+            }
+            if (Dob.value == "") {
+                temp += 1
+                $1("felidDob").classList.add("error")
+                Dob.classList.add("errorinput")
+            } else {
+                $1("felidDob").classList.remove("error")
+                Dob.classList.remove("errorinput")
+            }
+            if (bloodgp.value.trim() == "") {
+                temp += 1
+                $1("felidbloodgp").classList.add("error")
+                bloodgp.classList.add("errorinput")
+            } else {
+                $1("felidbloodgp").classList.remove("error")
+                bloodgp.classList.remove("errorinput")
+            }
+            if (Phone_no.value.length <= 9) {
+                temp += 1
+                $1("felidPhone_no").classList.add("error")
+                Phone_no.classList.add("errorinput")
+            } else {
+                $1("felidPhone_no").classList.remove("error")
+                Phone_no.classList.remove("errorinput")
+            }
+            if (address.value.trim() == "") {
+                temp += 1
+                $1("felidaddress").classList.add("error")
+                address.classList.add("errorinput")
+            } else {
+                $1("felidaddress").classList.remove("error")
+                address.classList.remove("errorinput")
+            }
+            if (email.value.trim() == "" ||  !/^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,4}$/.test(email.value)) {
+                temp += 1
+                $1("felidemail").classList.add("error")
+                email.classList.add("errorinput")
+            } else {
+                $1("felidemail").classList.remove("error")
+                email.classList.remove("errorinput")
+            }
+            console.log(temp)
+            if(temp == 0){
+            $('.toast').toast({delay: 2000});
+            $('#toast').toast('show')
+            console.log("sdfsf")
+            }
+            return false
+        })
+        $('#Login').click(()=>{
+            window.location.href = "/"
+        })
+    </script>
 </body>
+
 </html>
