--- a/tabs/login.html
+++ b/tabs/login.html
@@ -52,7 +52,7 @@
         if(username === null || username.length <= 6){
             console.log("username is invalid")
         }else{
-            window.location.href = "/home/studentlogin"
+            window.location.href = "/home/studenthome"
         }
 
         return false
