--- a/tabs/index.html
+++ b/tabs/index.html
@@ -46,7 +46,7 @@
                 <div class="w-50 d-flex j-c-c p-0 align-items-center">
                     <div class="align-items-center justify-content-center d-flex  rounded bookappointmenttxt">
                         <span>
-                            <a href="/home/studentlogin" class="hover-underline-animation">Book An Appointment</a>
+                            <a href="/home/studenthome" class="hover-underline-animation">Book An Appointment</a>
                         </span>
                     </div>
                 </div>
