--- a/tabs/register.html
+++ b/tabs/register.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/home/Asset/css/register.css">
     <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/home/Asset/css/register.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -85,19 +85,12 @@
     </div>
 
 
-    <div role="alert" aria-live="assertive" aria-atomic="true" data-animation="true" id="toast" class="toast hide t-msg" data-autohide="true">
-        <div class="toast-header">
+    <div role="alert" class="toast hide t-msg" aria-live="assertive" aria-atomic="true" data-animation="true" id="toast" data-autohide="true">
+
           <!-- <img src="..." class="rounded mr-2" alt="..."> -->
-          <strong class="mr-auto">iNeuron</strong>
-          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="toast-body">
-            <span>Application Submitted</span>
-            <br>
-            <span>Succesfully</span>
-        
+          
+          <div class="toast-body">
+              <span>Submitted Succesfully</span>
         </div>
       </div>
 
@@ -176,7 +169,10 @@
             if(temp == 0){
             $('.toast').toast({delay: 2000});
             $('#toast').toast('show')
-            console.log("sdfsf")
+            // console.log("sdfsf")
+            setTimeout(()=>{
+                window.location.href="/login"
+            },3000)
             }
             return false
         })
