--- a/tabs/studenthome.html
+++ b/tabs/studenthome.html
@@ -127,7 +127,7 @@
             console.log("as", event)
         })
 
-
+// mongodb+srv://khizar:<password>@cluster0.ijkkm.mongodb.net/?retryWrites=true&w=majority
        
 
     </script>
