--- a/tabs/index.html
+++ b/tabs/index.html
@@ -71,7 +71,7 @@
         text.value = data
     }
     $("#btn").on("click", function () {
-        $.get("/123", function (data) {
+        $.get("/api/321", function (data) {
             console.log(data)
         })
     })
