--- a/tabs/register.html
+++ b/tabs/register.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/home/Asset/css/register.css">
     <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Registration</title>
@@ -19,10 +19,10 @@
     <nav class="navbar navbar-light bglb">
         <span class="navbar-brand mb-0 h1 m-0 IndeiFlower" id="navtittle">Teacher Booking Appointment
             <img src="Asset/Image/comp.jpeg" class="navimg"></span>
-            <button class="btn btn-outline-primary my-2 my-sm-0 Login" id="Login">
-                <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                Login
-            </button>
+        <button class="btn btn-outline-primary my-2 my-sm-0 Login" id="Login">
+            <i class="fa-solid fa-arrow-right-from-bracket"></i>
+            Login
+        </button>
     </nav>
 
 
@@ -65,14 +65,15 @@
                     </div>
                     <div class="col-md-6">
                         <span id="felidemail" class="spanfiled">Enter Email</span>
-                        <input type="text" name="email" id="email" class="form-control" placeholder="eg. bot@1234bot.com"
-                            aria-label="Enter email">
+                        <input type="text" name="email" id="email" class="form-control"
+                            placeholder="eg. bot@1234bot.com" aria-label="Enter email">
                     </div>
                 </div>
                 <div class="d-flex justify-content-around flex-wrap col-md-12 py-1">
                     <div class="col-md-12">
                         <span id="felidaddress" class="spanfiled">Address</span>
-                        <textarea class="form-control w-100" id="address" placeholder="malad West" aria-label="eg. Enter Address" rows="3"></textarea>
+                        <textarea class="form-control w-100" id="address" placeholder="malad West"
+                            aria-label="eg. Enter Address" rows="3"></textarea>
                         <!-- <input type="textarea"  name="Phone_no" id="Phone_no"
                             class="form-control" placeholder="Phone no." aria-label="Enter Phone no."> -->
                     </div>
@@ -85,22 +86,23 @@
     </div>
 
 
-    <div role="alert" class="toast hide t-msg" aria-live="assertive" aria-atomic="true" data-animation="true" id="toast" data-autohide="true">
+    <div role="alert" class="toast hide t-msg" aria-live="assertive" aria-atomic="true" data-animation="true" id="toast"
+        data-autohide="true">
 
-          <!-- <img src="..." class="rounded mr-2" alt="..."> -->
-          
-          <div class="toast-body">
-              <span>Submitted Succesfully</span>
+        <!-- <img src="..." class="rounded mr-2" alt="..."> -->
+
+        <div class="toast-body">
+            <span>Submitted Succesfully</span>
         </div>
-      </div>
+    </div>
 
 
 
-      
+
     <script>
-        function $1(a){return document.getElementById(a)}
-        $('form').submit(()=>{
-            let temp = 0 
+        function $1(a) { return document.getElementById(a) }
+        $('form').submit(() => {
+            let temp = 0
             let name = document.getElementById("name")
             let rollno = document.getElementById("rollnumber")
             let Dob = document.getElementById("Dob")
@@ -108,6 +110,7 @@
             let Phone_no = document.getElementById("Phone_no")
             let address = document.getElementById("address")
             let emial = document.getElementById("email")
+            let url = '?'
             // console.log("val from name",name.value.length)
             if (name.value.trim() == "") {
                 temp += 1
@@ -116,6 +119,7 @@
             } else {
                 $1("felidname").classList.remove("error")
                 name.classList.remove("errorinput")
+                url += 'name=' + name.value.trim()
             }
             if (rollnumber.value.trim() == "") {
                 temp += 1
@@ -124,6 +128,7 @@
             } else {
                 $1("felidrollnumber").classList.remove("error")
                 rollnumber.classList.remove("errorinput")
+                url += '&rollno=' + rollnumber.value.trim()
             }
             if (Dob.value == "") {
                 temp += 1
@@ -132,6 +137,7 @@
             } else {
                 $1("felidDob").classList.remove("error")
                 Dob.classList.remove("errorinput")
+                url += '&dob=' + Dob.value
             }
             if (bloodgp.value.trim() == "") {
                 temp += 1
@@ -140,6 +146,7 @@
             } else {
                 $1("felidbloodgp").classList.remove("error")
                 bloodgp.classList.remove("errorinput")
+                url += '&bloodgr=' + encodeURIComponent(bloodgp.value.trim())
             }
             if (Phone_no.value.length <= 9) {
                 temp += 1
@@ -148,6 +155,7 @@
             } else {
                 $1("felidPhone_no").classList.remove("error")
                 Phone_no.classList.remove("errorinput")
+                url += '&Phone_no=' + Phone_no.value
             }
             if (address.value.trim() == "") {
                 temp += 1
@@ -156,28 +164,34 @@
             } else {
                 $1("felidaddress").classList.remove("error")
                 address.classList.remove("errorinput")
+                url += '&address=' + address.value.trim()
             }
-            if (email.value.trim() == "" ||  !/^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,4}$/.test(email.value)) {
+            if (email.value.trim() == "" || !/^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,4}$/.test(email.value)) {
                 temp += 1
                 $1("felidemail").classList.add("error")
                 email.classList.add("errorinput")
             } else {
                 $1("felidemail").classList.remove("error")
                 email.classList.remove("errorinput")
+                url += '&email=' + email.value.trim()
             }
             console.log(temp)
-            if(temp == 0){
-            $('.toast').toast({delay: 2000});
-            $('#toast').toast('show')
-            // console.log("sdfsf")
-            setTimeout(()=>{
-                window.location.href="/login"
-            },3000)
+            if (temp == 0) {
+                $('.toast').toast({ delay: 2000 });
+                $('#toast').toast('show')
+                // console.log("sdfsf")
+                setTimeout(() => {
+                    // window.location.href = "/login"
+                }, 3000)
+                $.post(`http://localhost:4240/api/userform${url}`, function (data) {
+                    console.log(data)
+                })
             }
+            console.log(url)
             return false
         })
-        $('#Login').click(()=>{
-            window.location.href = "/"
+        $('#Login').click(() => {
+            // window.location.href = "/"
         })
     </script>
 </body>
